<resources>
    <string name="text_app_welcome">Welcome to appName</string>
    <string name="hint_first">First Name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Confirm Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_verify">Back To Sign In</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_remain_log_in">Keep me signed in</string>
    <string name="text_register">Not a member?</string>
    <string name="title_app_name">App Name</string>
    <string name="title_register">Register</string>
    <string name="text_night_mode">Night Mode</string>
    <string name="text_verify">Verify your email</string>
    <string name="text_verify_warning">If you did not register with this account, you can
    ignore this email.</string>
    <string name="text_forgot_password_description">Enter the email address associated with your
        account.</string>
    <string name="text_forgot_password"><b>Forgot Password</b></string>
    <string name="text_email_reset">We will send you a link to your email to reset
    your password.</string>

    <string name="snackbar_success">testing snackbar</string>

    <string name="text_change_password">Change Password</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="switch_theme">My theme</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>


    <string name="text_current_weather">Current Weather</string>
    <string name="text_new_chat">Create a new chat room</string>
    <string name="text_chat_name">Name of Chat Room:</string>
    <string name="text_create">Create</string>
    <string name="text_add_user">Add User</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_accept_contact">Accept Request</string>
    <string name="text_accept_contact_prompt">Would you like to accept this contact request?</string>
    <string name="text_home_contact_request">New Contact Requests</string>
    <string name="text_delete_contact_prompt">Are you sure you want to delete this user?</string>
    <string name="text_delete_chat_prompt">Are you sure you want to delete this chat?</string>
    <string name="text_delete">Delete</string>


    //test text for settings buttons
    <string name="action_settings_message">You selected Settings</string>
    <string name="action_signOut_message">You selected Sign Out</string>

    <string name="action_sign_out">Sign Out</string>

    <string name="edit_zip_code">zip code</string>
    <string name="button_get">get</string>
    <string name="button_save">save weather</string>
    <string name="button_getSaved">saved</string>
    <string name="lonLat">Lon/Lat</string>
    <string name="forecast24hour">24-Hour Forecast</string>
    <string name="forecast5day">5-Day Forecast</string>
    <string name="formatString">{0}{1}</string>
    <string name="title_activity_maps">Map</string>


    <string name="label_location">Current location:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
